[gd_scene load_steps=15 format=3 uid="uid://cwalvlb0qn8ll"]

[ext_resource type="Script" uid="uid://bxn1bnqj1vyg4" path="res://Enemies/ph_wanderer.gd" id="1_uwtlr"]
[ext_resource type="Texture2D" uid="uid://c6xv8b8acgao0" path="res://icon.svg" id="2_4vmp6"]
[ext_resource type="Script" uid="uid://bpy1dv6s7e1jl" path="res://Components/health_component.gd" id="2_uwtlr"]
[ext_resource type="Texture2D" uid="uid://bdlqnffswnsjm" path="res://Assets/poisonbubbles1.png" id="3_8x18g"]
[ext_resource type="Script" uid="uid://d0j4us0xeud10" path="res://Components/velocity_component.gd" id="4_ikuxl"]
[ext_resource type="Script" uid="uid://dftmybkeosab2" path="res://Components/hurt_box_component.gd" id="5_vwoug"]
[ext_resource type="Script" uid="uid://cnis4rerd12t4" path="res://States/state_machine.gd" id="6_5nylp"]
[ext_resource type="Script" uid="uid://dlrm5xsxli2f" path="res://States/ph_wanderer_patrol.gd" id="7_n72wm"]
[ext_resource type="Script" uid="uid://yhq3og4ii6vy" path="res://States/ph_wanderer_aggro.gd" id="8_5nylp"]
[ext_resource type="Script" uid="uid://cih87nyqdvl83" path="res://States/ph_wanderer_standing.gd" id="10_nqijh"]

[sub_resource type="SpriteFrames" id="SpriteFrames_5nylp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_4vmp6")
}, {
"duration": 1.0,
"texture": ExtResource("3_8x18g")
}],
"loop": true,
"name": &"aggro_anim",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_4vmp6")
}],
"loop": true,
"name": &"patrol_anim",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_4vmp6"]
radius = 60.0083

[sub_resource type="CircleShape2D" id="CircleShape2D_gs0rq"]
radius = 63.0317

[sub_resource type="CircleShape2D" id="CircleShape2D_vwoug"]
radius = 134.06

[node name="ph_wanderer" type="CharacterBody2D"]
scale = Vector2(0.5, 0.5)
collision_layer = 24
collision_mask = 9
script = ExtResource("1_uwtlr")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_4vmp6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_5nylp")
animation = &"aggro_anim"
frame_progress = 0.479019

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_4vmp6")

[node name="HealthComponent" type="Node2D" parent="."]
script = ExtResource("2_uwtlr")
max_health = 5
metadata/_custom_type_script = "uid://bpy1dv6s7e1jl"

[node name="VelocityComponent" type="Node2D" parent="."]
script = ExtResource("4_ikuxl")
BASE_SPEED = 50.0
current_speed = 50.0
metadata/_custom_type_script = "uid://d0j4us0xeud10"

[node name="HurtBoxComponent" type="Area2D" parent="." node_paths=PackedStringArray("health_component")]
collision_layer = 25
collision_mask = 9
script = ExtResource("5_vwoug")
health_component = NodePath("../HealthComponent")
metadata/_custom_type_script = "uid://dftmybkeosab2"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBoxComponent"]
shape = SubResource("CircleShape2D_gs0rq")

[node name="AggroRadius" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_vwoug")
disabled = true

[node name="State_Machine" type="Node" parent="." node_paths=PackedStringArray("starting_state")]
script = ExtResource("6_5nylp")
starting_state = NodePath("Patrol")

[node name="Patrol" type="Node" parent="State_Machine" node_paths=PackedStringArray("aggro_state", "standing_state")]
script = ExtResource("7_n72wm")
aggro_state = NodePath("../Aggro")
standing_state = NodePath("../Standing")
animation_name = "patrol_anim"

[node name="Aggro" type="Node" parent="State_Machine" node_paths=PackedStringArray("patrol_state", "standing_state")]
script = ExtResource("8_5nylp")
patrol_state = NodePath("../Patrol")
standing_state = NodePath("../Standing")
animation_name = "aggro_anim"

[node name="Standing" type="Node" parent="State_Machine" node_paths=PackedStringArray("patrol_state", "aggro_state")]
script = ExtResource("10_nqijh")
patrol_state = NodePath("../Patrol")
aggro_state = NodePath("../Aggro")
